--- a/parent/bin/pom.xml
+++ b/parent/bin/pom.xml
@@ -21,6 +21,8 @@
 		<commons-lang3>3.4</commons-lang3>
 		<zkclient>0.1</zkclient>
 		<fastjson>1.2.10</fastjson>
+		<poi-ooxml>3.14</poi-ooxml>
+		<poi>3.16</poi>
 	</properties>
 
 	<dependencies>
