--- a/manager/manager-service/src/main/resources/application.properties
+++ b/manager/manager-service/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.redis.cluster.nodes=114.116.69.215:7001,114.116.69.215:7002,114.116.69.21
 
 #====== log-end
 
-server.port=8082
+server.port=8086
 
 spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-dubbo.application.name=e3-manager
+dubbo.application.name=manager
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
@@ -31,10 +31,11 @@ mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
 
 spring.activemq.broker-url=tcp://114.116.69.215:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
 spring.activemq.in-memory=true
 #true表示使用连接池
-spring.activemq.pool.enabled=true
-##连接池最大连接数
-spring.activemq.pool.max-connections=5
-##空闲的连接过期时间，默认为30秒
-spring.activemq.pool.idle-timeout=30000
+spring.activemq.pool.enabled=false
+spring.jms.pub-sub-domain=true
+spring.jms.cache.enabled=false
+
