--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.redis.cluster.nodes=114.116.69.215:7001,114.116.69.215:7002,114.116.69.21
 
 #====== log-end
 
-server.port=8081
+server.port=8085
 
 spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-dubbo.application.name=e3-content
+dubbo.application.name=content
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20881
