--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>1.8</java.version>
 		<dubbo-spring-boot-starter>0.2.0</dubbo-spring-boot-starter>
 		<pagehelper-spring-boot-starter>1.2.10</pagehelper-spring-boot-starter>
-		<zookeeper>3.4.6</zookeeper>
+		<zookeeper>3.4.13</zookeeper>
 		<commons-lang3>3.4</commons-lang3>
 		<zkclient>0.1</zkclient>
 		<fastjson>1.2.10</fastjson>
@@ -35,5 +35,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
 	</dependencies>
 </project>
