--- a/portal-web/src/main/resources/application.properties
+++ b/portal-web/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 # mvc end
 
 # web start
-server.port = 8080
+server.port = 8081
 # web end
 
 #thymeleaf start
@@ -27,7 +27,7 @@ spring.thymeleaf.enabled=false
 spring.servlet.multipart.max-file-size=5MB
 
 # dubbo
-dubbo.application.name=manager-web
+dubbo.application.name=portal-web
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
