--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.mvc.servlet.load-on-startup=1
 spring.redis.cluster.max-redirects=3
 # 集群地址
 spring.redis.cluster.nodes=114.116.69.215:7001,114.116.69.215:7002,114.116.69.215:7003,114.116.69.215:7004,114.116.69.215:7005,114.116.69.215:7006
-
 #====== log-start
 # logging.config=classpath:logback-spring.xml
 
@@ -18,7 +17,7 @@ server.port=8085
 spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=@root_huang
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 dubbo.application.name=content
 dubbo.registry.address=zookeeper://139.199.201.162:2181
@@ -29,4 +28,4 @@ dubbo.protocol.port=20881
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
 
-
+spring.jpa.show-sql=true
