--- a/manager-web/src/main/resources/application.properties
+++ b/manager-web/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=@root_huang
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # jpa start
 spring.jpa.show-sql=true
