--- a/manager/manager-service/src/main/resources/application.properties
+++ b/manager/manager-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port=8086
 spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
 spring.datasource.username=root
 spring.datasource.password=@root_huang
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 dubbo.application.name=manager
 dubbo.registry.address=zookeeper://139.199.201.162:2181
