--- a/portal-web/pom.xml
+++ b/portal-web/pom.xml
@@ -84,6 +84,10 @@
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
