增添日志功能

--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -29,3 +29,5 @@ mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
 
 spring.jpa.show-sql=true
+
+logging.file=classpath:content-service.log
