--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,4 +10,15 @@
 	</parent>
 	<artifactId>common</artifactId>
 	<packaging>jar</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson}</version>
+		</dependency>
+	</dependencies>
 </project>
