--- a/manager/manager-dao/pom.xml
+++ b/manager/manager-dao/pom.xml
@@ -34,14 +34,8 @@
 				<includes>
 					<include>**/*.xml</include>
 				</includes>
-				<filtering>true</filtering>
+				<filtering>false</filtering>
 			</resource>
 		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
 	</build>
 </project>
