--- a/search/search-service/pom.xml
+++ b/search/search-service/pom.xml
@@ -78,6 +78,7 @@
 				<directory>src/main/java</directory>
 				<includes>
 					<include>**/*.xml</include>
+					<include>**/*.properties</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
