--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,5 +20,9 @@
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 </project>
