--- a/sso/sso-service/pom.xml
+++ b/sso/sso-service/pom.xml
@@ -6,7 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>sso-service</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <dependencies>
 		<dependency>
 			<groupId>cn.solarcat</groupId>
