--- a/sso/sso-service/src/main/resources/application.properties
+++ b/sso/sso-service/src/main/resources/application.properties
@@ -20,11 +20,10 @@ spring.datasource.username=root
 spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-dubbo.application.name=manager
+dubbo.application.name=sso
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20883
-dubbo.provider.timeout=30000
 
 # mybatis start
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
