--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -23,7 +23,9 @@ dubbo.application.name=content
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20881
-
+dubbo.application.qos-accept-foreign-ip=true
+dubbo.application.qos-enable=true
+dubbo.application.qos-port=60001
 # mybatis start
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
