--- a/manager/manager-service/src/main/resources/application.properties
+++ b/manager/manager-service/src/main/resources/application.properties
@@ -24,8 +24,9 @@ dubbo.application.name=manager
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
-dubbo.provider.timeout=30000
-
+dubbo.application.qos-accept-foreign-ip=true
+dubbo.application.qos-enable=true
+dubbo.application.qos-port=60002
 # mybatis start
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
