--- a/search/search-service/src/main/resources/application.properties
+++ b/search/search-service/src/main/resources/application.properties
@@ -17,8 +17,9 @@ dubbo.application.name=search
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20882
-dubbo.provider.timeout=30000
-
+dubbo.application.qos-accept-foreign-ip=true
+dubbo.application.qos-enable=true
+dubbo.application.qos-port=60003
 # mybatis start
 mybatis.mapper-locations: classpath:cn/solarcat/search/mapper/*.xml
 # mybatis end
