--- a/manager-web/pom.xml
+++ b/manager-web/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${poi-ooxml}</version>
         </dependency>
+        		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>${pagehelper-spring-boot-starter}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
