--- a/manager-web/src/main/resources/application.properties
+++ b/manager-web/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.servlet.multipart.max-file-size=5MB
 
 # dubbo
 dubbo.application.name=manager-web
-dubbo.registry.address=zookeeper://139.199.201.162:2181
+dubbo.registry.address=zookeeper://solarcat.cn:2181
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
-#dubbo.application.qos-port=33333
-#dubbo.application.qos-enable=true
-#dubbo.application.qos-accept-foreign-ip=true
+dubbo.application.qos-port=33333
+dubbo.application.qos-enable=true
+dubbo.application.qos-accept-foreign-ip=true
