--- a/sso/sso-service/src/main/resources/application.properties
+++ b/sso/sso-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.servlet.load-on-startup=1
 # 在群集中执行命令时要遵循的最大重定向数目。
 spring.redis.cluster.max-redirects=3
 # 集群地址
-spring.redis.cluster.nodes=114.116.69.215:7001,114.116.69.215:7002,114.116.69.215:7003,114.116.69.215:7004,114.116.69.215:7005,114.116.69.215:7006
+spring.redis.cluster.nodes=service.solarcat.cn:7001,service.solarcat.cn:7002,service.solarcat.cn:7003,service.solarcat.cn:7004,service.solarcat.cn:7005,service.solarcat.cn:7006
 
 #====== log-start
 # logging.config=classpath:logback-spring.xml
@@ -21,7 +21,8 @@ spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 dubbo.application.name=sso
-dubbo.registry.address=zookeeper://139.199.201.162:2181
+dubbo.registry.address=zookeeper://solarcat.cn:2181
+
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20883
 
@@ -29,7 +30,7 @@ dubbo.protocol.port=20883
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
 
-spring.activemq.broker-url=tcp://114.116.69.215:61616
+spring.activemq.broker-url=tcp://service.solarcat.cn:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
