--- a/item-web/src/main/resources/application.properties
+++ b/item-web/src/main/resources/application.properties
@@ -21,14 +21,13 @@ server.port = 9000
 
 # dubbo
 dubbo.application.name=item-web
-dubbo.registry.address=zookeeper://139.199.201.162:2181
+dubbo.registry.address=zookeeper://solarcat.cn:2181
 dubbo.provider.timeout=5000
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
-dubbo.application.qos-port=33333
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=false
 
-spring.activemq.broker-url=tcp://114.116.69.215:61616
+spring.activemq.broker-url=tcp://service.solarcat.cn:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
