--- a/search/search-service/src/main/resources/application.properties
+++ b/search/search-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 dubbo.application.name=search
-dubbo.registry.address=zookeeper://139.199.201.162:2181
+dubbo.registry.address=zookeeper://solarcat.cn:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20882
 dubbo.registry.check=true
@@ -22,7 +22,7 @@ dubbo.registry.check=true
 mybatis.mapper-locations: classpath:cn/solarcat/search/mapper/*.xml
 # mybatis end
 
-spring.activemq.broker-url=tcp://114.116.69.215:61616
+spring.activemq.broker-url=tcp://service.solarcat.cn:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
@@ -30,4 +30,4 @@ spring.activemq.in-memory=true
 spring.activemq.pool.enabled=false
 spring.jms.pub-sub-domain=true
 
-spring.data.solr.host=http://114.116.69.215:8983/solr/MutualExclusion
+spring.data.solr.host=http://service.solarcat.cn:8983/solr/MutualExclusion
