--- a/item-web/src/main/resources/application.properties
+++ b/item-web/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.port = 9000
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
 ##spring.thymeleaf.content-type=text/html
-# spring.thymeleaf.enabled=false
+spring.thymeleaf.enabled=false
 #thymeleaf end
 
 # dubbo
