--- a/search/search-service/src/main/resources/application.properties
+++ b/search/search-service/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.activemq.in-memory=true
 spring.activemq.pool.enabled=false
 spring.jms.pub-sub-domain=true
 
-spring.data.solr.host=http://service.solarcat.cn:8983/solr/MutualExclusion
+spring.data.solr.host=http://anteil.cn:8983/solr/MutualExclusion
