更换数据库连接池

--- a/manager-web/pom.xml
+++ b/manager-web/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>${pagehelper-spring-boot-starter}</version>
 		</dependency>
+		<!-- 数据库连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid-spring-boot-starter}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
