--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,6 +21,7 @@
 		<commons-lang3>3.4</commons-lang3>
 		<zkclient>0.1</zkclient>
 		<fastjson>1.2.10</fastjson>
+		<druid-spring-boot-starter>1.1.10</druid-spring-boot-starter>
 	</properties>
 
 	<dependencies>
