--- a/cart-web/pom.xml
+++ b/cart-web/pom.xml
@@ -82,6 +82,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<!-- 数据库连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid-spring-boot-starter}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
