--- a/cart/cart-service/pom.xml
+++ b/cart/cart-service/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- 数据库连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid-spring-boot-starter}</version>
+		</dependency>
 	</dependencies>
 		<build>
 		<plugins>
