--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -19,6 +19,28 @@ spring.datasource.username=root
 spring.datasource.password=@root_huang
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#连接池配置
+spring.datasource.druid.initialSize=5
+spring.datasource.druid.minIdle=5
+spring.datasource.druid.maxActive=20
+#连接等待超时时间
+spring.datasource.druid.maxWait=60000
+#配置隔多久进行一次检测(检测可以关闭的空闲连接)
+spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+#配置连接在池中的最小生存时间
+spring.datasource.druid.minEvictableIdleTimeMillis=300000
+spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.druid.testWhileIdle=true
+spring.datasource.druid.testOnBorrow=false
+spring.datasource.druid.testOnReturn=false
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.druid.poolPreparedStatements=true
+spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+spring.datasource.druid.filters=stat,wall,log4j
+# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
 dubbo.application.name=content
 dubbo.registry.address=zookeeper://solarcat.cn:2181
 
