--- a/cart-web/src/main/resources/application.properties
+++ b/cart-web/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.druid.testOnReturn=false
 spring.datasource.druid.poolPreparedStatements=true
 spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.druid.filters=stat,wall,log4j
+spring.datasource.druid.filters=stat,wall
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
@@ -36,7 +36,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 # mvc end
 
 # web start
-server.port = 8080
+server.port = 9005
 # web end
 
 #thymeleaf start
@@ -49,7 +49,7 @@ spring.thymeleaf.enabled=false
 spring.servlet.multipart.max-file-size=5MB
 
 # dubbo
-dubbo.application.name=manager-web
+dubbo.application.name=cart-web
 dubbo.registry.address=zookeeper://solarcat.cn:2181
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=true
