--- a/manager-web/src/main/resources/application.properties
+++ b/manager-web/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.druid.testOnReturn=false
 spring.datasource.druid.poolPreparedStatements=true
 spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.druid.filters=stat,wall,log4j
+spring.datasource.druid.filters=stat,wall
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
