--- a/item-web/pom.xml
+++ b/item-web/pom.xml
@@ -68,11 +68,11 @@
 			<artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
 		<!-- 数据库连接池 -->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>${druid-spring-boot-starter}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.alibaba</groupId> -->
+<!-- 			<artifactId>druid-spring-boot-starter</artifactId> -->
+<!-- 			<version>${druid-spring-boot-starter}</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
