--- a/search-web/pom.xml
+++ b/search-web/pom.xml
@@ -56,14 +56,19 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 		<!-- 数据库连接池 -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.alibaba</groupId> -->
-<!-- 			<artifactId>druid-spring-boot-starter</artifactId> -->
-<!-- 			<version>${druid-spring-boot-starter}</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.alibaba</groupId> -->
+		<!-- <artifactId>druid-spring-boot-starter</artifactId> -->
+		<!-- <version>${druid-spring-boot-starter}</version> -->
+		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
-	    <resources>
+		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
