--- a/sso-web/src/main/resources/application.properties
+++ b/sso-web/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+
+spring.mvc.favicon.enabled=false
