--- a/manager-web/pom.xml
+++ b/manager-web/pom.xml
@@ -111,7 +111,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-	<resources>
+		<resources>
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
@@ -131,6 +131,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+		            <execution>
+		                <goals>
+		                    <goal>repackage</goal>
+		                </goals>
+		            </execution>
+        		</executions>
 			</plugin>
 		</plugins>
 	</build>
