--- a/search-web/src/main/resources/application.properties
+++ b/search-web/src/main/resources/application.properties
@@ -1,45 +1,6 @@
-#spring.datasource.url=jdbc:mysql://cdb-1m3hpy15.gz.tencentcdb.com:10040/e3mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
-#spring.datasource.username=root
-#spring.datasource.password=@root_huang
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#
-##连接池配置
-#spring.datasource.druid.initialSize=5
-#spring.datasource.druid.minIdle=5
-#spring.datasource.druid.maxActive=20
-##连接等待超时时间
-#spring.datasource.druid.maxWait=60000
-##配置隔多久进行一次检测(检测可以关闭的空闲连接)
-#spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-##配置连接在池中的最小生存时间
-#spring.datasource.druid.minEvictableIdleTimeMillis=300000
-#spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
-#spring.datasource.druid.testWhileIdle=true
-#spring.datasource.druid.testOnBorrow=false
-#spring.datasource.druid.testOnReturn=false
-## 打开PSCache，并且指定每个连接上PSCache的大小
-#spring.datasource.druid.poolPreparedStatements=true
-#spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
-## 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-#spring.datasource.druid.filters=stat,wall,log4j
-## 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-#spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
-# mvc start
-spring.mvc.view.suffix=.jsp
-spring.mvc.view.prefix=/WEB-INF/jsp/
-# mvc end
-
 # web start
 server.port = 8085
 # web end
-
-#thymeleaf start
-#spring.thymeleaf.mode=HTML5
-#spring.thymeleaf.encoding=UTF-8
-##spring.thymeleaf.content-type=text/html
-spring.thymeleaf.enabled=false
-#thymeleaf end
 
 # dubbo
 dubbo.application.name=search-web
@@ -48,3 +9,13 @@ dubbo.provider.timeout=5000
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=true
+
+#thymelea模板配置
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#热部署文件，页面不产生缓存，及时更新
+spring.thymeleaf.cache=false
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
