修改 商城静态页面生成

--- a/item-web/pom.xml
+++ b/item-web/pom.xml
@@ -48,6 +48,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/ognl/ognl -->
+		<dependency>
+		    <groupId>ognl</groupId>
+		    <artifactId>ognl</artifactId>
+		    <version>3.2.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
