--- a/item-web/src/main/resources/application.properties
+++ b/item-web/src/main/resources/application.properties
@@ -16,7 +16,8 @@
 #spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
 #spring.datasource.druid.testWhileIdle=true
 #spring.datasource.druid.testOnBorrow=false
-#spring.datasource.druid.testOnReturn=false
+#spring.datasource.druid.testOnRe
+turn=false
 ## 打开PSCache，并且指定每个连接上PSCache的大小
 #spring.datasource.druid.poolPreparedStatements=true
 #spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
