修改之前使用域名代替IP地址所产生的bug,修改部分页面

--- a/cart-web/src/main/resources/application.properties
+++ b/cart-web/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.servlet.multipart.max-file-size=5MB
 
 # dubbo
 dubbo.application.name=cart-web
-dubbo.registry.address=zookeeper://solarcat.cn:2181
+dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=true
 
