--- a/cart/cart-service/src/main/resources/application.properties
+++ b/cart/cart-service/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.datasource.druid.filters=stat,wall,log4j
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 dubbo.application.name=cart
-dubbo.registry.address=zookeeper://solarcat.cn:2181
+dubbo.registry.address=zookeeper://139.199.201.162:2181
 
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20884
