--- a/sso-web/src/main/resources/application.properties
+++ b/sso-web/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8087
 
 # dubbo
 dubbo.application.name=search-web
-dubbo.registry.address=zookeeper://solarcat.cn:2181
+dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.provider.timeout=5000
 
 dubbo.application.qos-enable=true
