--- a/item-web/src/main/resources/application.properties
+++ b/item-web/src/main/resources/application.properties
@@ -32,7 +32,7 @@ server.port = 9000
 
 # dubbo
 dubbo.application.name=item-web
-dubbo.registry.address=zookeeper://solarcat.cn:2181
+dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.provider.timeout=5000
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
 dubbo.application.qos-enable=true
