--- a/item-web/src/main/resources/application.properties
+++ b/item-web/src/main/resources/application.properties
@@ -38,7 +38,7 @@ dubbo.provider.timeout=5000
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=false
 
-spring.activemq.broker-url=tcp://service.solarcat.cn:61616
+spring.activemq.broker-url=tcp://47.93.194.16:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
