--- a/manager/manager-service/src/main/resources/application.properties
+++ b/manager/manager-service/src/main/resources/application.properties
@@ -4,10 +4,16 @@ spring.mvc.servlet.load-on-startup=1
 #===== redis-start
 
 # 在群集中执行命令时要遵循的最大重定向数目。
-spring.redis.cluster.max-redirects=3
-# 集群地址
-spring.redis.cluster.nodes=service.solarcat.cn:7001,service.solarcat.cn:7002,service.solarcat.cn:7003,service.solarcat.cn:7004,service.solarcat.cn:7005,service.solarcat.cn:7006
-
+#spring.redis.cluster.max-redirects=3
+## 集群地址
+#spring.redis.cluster.nodes=service.solarcat.cn:7001,service.solarcat.cn:7002,service.solarcat.cn:7003,service.solarcat.cn:7004,service.solarcat.cn:7005,service.solarcat.cn:7006
+# REDIS (RedisProperties)
+# Redis服务器地址
+spring.redis.host=114.116.69.215
+# Redis服务器连接端口
+spring.redis.port=6379
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
 #====== log-start
 # logging.config=classpath:logback-spring.xml
 
@@ -51,7 +57,7 @@ dubbo.protocol.port=20880
 mybatis.mapper-locations: classpath:cn/solarcat/mapper/*.xml
 # mybatis end
 
-spring.activemq.broker-url=tcp://114.116.69.215:61616
+spring.activemq.broker-url=tcp://47.93.194.16:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
