--- a/content/content-service/src/main/resources/application.properties
+++ b/content/content-service/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.mvc.servlet.load-on-startup=1
 #===== redis-start
 
 # 在群集中执行命令时要遵循的最大重定向数目。
-spring.redis.cluster.max-redirects=3
-# 集群地址
-spring.redis.cluster.nodes=service.solarcat.cn:7001,service.solarcat.cn:7002,service.solarcat.cn:7003,service.solarcat.cn:7004,service.solarcat.cn:7005,service.solarcat.cn:7006
+#spring.redis.cluster.max-redirects=3
+## 集群地址
+#spring.redis.cluster.nodes=service.solarcat.cn:7001,service.solarcat.cn:7002,service.solarcat.cn:7003,service.solarcat.cn:7004,service.solarcat.cn:7005,service.solarcat.cn:7006
+# Redis服务器地址
+spring.redis.host=114.116.69.215
+# Redis服务器连接端口
+spring.redis.port=6379
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
 #====== log-start
 # logging.config=classpath:logback-spring.xml
 
