--- a/search/search-service/src/main/resources/application.properties
+++ b/search/search-service/src/main/resources/application.properties
@@ -44,7 +44,7 @@ dubbo.registry.check=true
 mybatis.mapper-locations: classpath:cn/solarcat/search/mapper/*.xml
 # mybatis end
 
-spring.activemq.broker-url=tcp://service.solarcat.cn:61616
+spring.activemq.broker-url=tcp://47.93.194.16:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
