--- a/sso-web/src/main/resources/application.properties
+++ b/sso-web/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8087
 # web end
 
 # dubbo
-dubbo.application.name=search-web
+dubbo.application.name=sso-web
 dubbo.registry.address=zookeeper://139.199.201.162:2181
 dubbo.provider.timeout=5000
 
