--- a/manager-web/src/main/resources/application.properties
+++ b/manager-web/src/main/resources/application.properties
@@ -54,3 +54,4 @@ dubbo.registry.address=zookeeper://139.199.201.162:2181
  # 消费方应用名，用于计算依赖关系，不是匹配条件，不要与提供方一样
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=true
+dubbo.consumer.timeout=60000
