--- a/sso-web/src/main/resources/application.properties
+++ b/sso-web/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port = 8087
 # dubbo
 dubbo.application.name=sso-web
 dubbo.registry.address=zookeeper://139.199.201.162:2181
-dubbo.provider.timeout=5000
-
+dubbo.provider.timeout=60000
+dubbo.consumer.timeout=60000
 dubbo.application.qos-enable=true
 dubbo.application.qos-accept-foreign-ip=true
 
